AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = mana

mana_CXXFLAGS = -DPKG_DATADIR=\""$(pkgdatadir)/"\"      \
	       -DLOCALEDIR=\""$(localedir)"\"

mana_SOURCES = gui/widgets/avatar.cpp \
	      gui/widgets/avatar.h \
	      gui/widgets/browserbox.cpp \
	      gui/widgets/browserbox.h \
	      gui/widgets/button.cpp \
	      gui/widgets/button.h \
	      gui/widgets/channeltab.cpp \
	      gui/widgets/channeltab.h \
	      gui/widgets/chattab.cpp \
	      gui/widgets/chattab.h \
	      gui/widgets/checkbox.cpp \
	      gui/widgets/checkbox.h \
	      gui/widgets/container.cpp \
	      gui/widgets/container.h \
	      gui/widgets/desktop.cpp \
	      gui/widgets/desktop.h \
	      gui/widgets/dropdown.cpp \
	      gui/widgets/dropdown.h \
	      gui/widgets/flowcontainer.cpp \
	      gui/widgets/flowcontainer.h \
	      gui/widgets/icon.cpp \
	      gui/widgets/icon.h \
	      gui/widgets/inttextfield.cpp \
	      gui/widgets/inttextfield.h \
	      gui/widgets/label.cpp \
	      gui/widgets/label.h \
	      gui/widgets/layout.cpp \
	      gui/widgets/layout.h \
	      gui/widgets/layouthelper.cpp \
	      gui/widgets/layouthelper.h \
	      gui/widgets/listbox.cpp \
	      gui/widgets/listbox.h \
	      gui/widgets/passwordfield.cpp \
	      gui/widgets/passwordfield.h \
	      gui/widgets/popup.cpp \
	      gui/widgets/popup.h \
	      gui/widgets/progressbar.cpp \
	      gui/widgets/progressbar.h \
	      gui/widgets/radiobutton.cpp \
	      gui/widgets/radiobutton.h \
	      gui/widgets/resizegrip.cpp \
	      gui/widgets/resizegrip.h \
	      gui/widgets/scrollarea.cpp \
	      gui/widgets/scrollarea.h \
	      gui/widgets/slider.cpp \
	      gui/widgets/slider.h \
	      gui/widgets/tab.cpp \
	      gui/widgets/tab.h \
	      gui/widgets/tabbedarea.cpp \
	      gui/widgets/tabbedarea.h \
	      gui/widgets/textbox.cpp \
	      gui/widgets/textbox.h \
	      gui/widgets/textfield.cpp \
	      gui/widgets/textfield.h \
	      gui/widgets/textpreview.cpp \
	      gui/widgets/textpreview.h \
	      gui/widgets/vertcontainer.cpp \
	      gui/widgets/vertcontainer.h \
	      gui/widgets/whispertab.cpp \
	      gui/widgets/whispertab.h \
	      gui/widgets/window.cpp \
	      gui/widgets/window.h \
	      gui/widgets/windowcontainer.cpp \
	      gui/widgets/windowcontainer.h \
	      gui/buy.cpp \
	      gui/buy.h \
	      gui/buysell.cpp \
	      gui/buysell.h \
	      gui/changeemaildialog.cpp \
	      gui/changeemaildialog.h \
	      gui/changepassworddialog.cpp \
	      gui/changepassworddialog.h \
	      gui/charselectdialog.cpp \
	      gui/charselectdialog.h \
	      gui/charcreatedialog.cpp \
	      gui/charcreatedialog.h \
	      gui/chat.cpp \
	      gui/chat.h \
	      gui/confirmdialog.cpp \
	      gui/confirmdialog.h \
	      gui/connectiondialog.cpp \
	      gui/connectiondialog.h \
	      gui/debugwindow.cpp \
	      gui/debugwindow.h \
	      gui/emotepopup.cpp \
	      gui/emotepopup.h \
	      gui/emoteshortcutcontainer.cpp \
	      gui/emoteshortcutcontainer.h \
	      gui/equipmentwindow.cpp \
	      gui/equipmentwindow.h \
	      gui/focushandler.cpp \
	      gui/focushandler.h \
	      gui/gui.cpp \
	      gui/gui.h \
	      gui/guildlistbox.cpp \
	      gui/guildlistbox.h \
	      gui/guildwindow.cpp \
	      gui/guildwindow.h \
	      gui/help.cpp \
	      gui/help.h \
	      gui/inventorywindow.cpp \
	      gui/inventorywindow.h \
	      gui/itemamount.cpp \
	      gui/itemamount.h \
	      gui/itemcontainer.cpp \
	      gui/itemcontainer.h \
	      gui/itemlinkhandler.cpp \
	      gui/itemlinkhandler.h \
	      gui/itempopup.cpp \
	      gui/itempopup.h \
	      gui/itemshortcutcontainer.cpp \
	      gui/itemshortcutcontainer.h \
	      gui/linkhandler.h \
	      gui/login.cpp \
	      gui/login.h \
	      gui/minimap.cpp \
	      gui/minimap.h \
	      gui/ministatus.cpp \
	      gui/ministatus.h \
	      gui/npcdialog.cpp \
	      gui/npcdialog.h \
	      gui/npcpostdialog.cpp \
	      gui/npcpostdialog.h \
	      gui/okdialog.cpp \
	      gui/okdialog.h \
	      gui/outfitwindow.cpp \
	      gui/outfitwindow.h \
	      gui/palette.cpp \
	      gui/palette.h \
	      gui/partywindow.cpp \
	      gui/partywindow.h \
	      gui/playerbox.cpp \
	      gui/playerbox.h \
	      gui/popupmenu.cpp \
	      gui/popupmenu.h \
	      gui/quitdialog.cpp \
	      gui/quitdialog.h \
	      gui/recorder.cpp \
	      gui/recorder.h \
	      gui/register.cpp \
	      gui/register.h \
	      gui/sdlinput.cpp \
	      gui/sdlinput.h \
	      gui/sell.cpp \
	      gui/sell.h \
	      gui/serverdialog.cpp \
	      gui/serverdialog.h \
	      gui/setup.cpp \
	      gui/setup.h \
	      gui/setup_audio.cpp \
	      gui/setup_audio.h \
	      gui/setup_colors.cpp \
	      gui/setup_colors.h \
	      gui/setup_joystick.cpp \
	      gui/setup_joystick.h \
	      gui/setup_keyboard.cpp \
	      gui/setup_keyboard.h \
	      gui/setup_players.cpp \
	      gui/setup_players.h \
	      gui/setup_video.cpp \
	      gui/setup_video.h \
	      gui/setuptab.cpp \
	      gui/setuptab.h \
	      gui/shop.cpp \
	      gui/shop.h \
	      gui/shoplistbox.cpp \
	      gui/shoplistbox.h \
	      gui/shortcutcontainer.cpp \
	      gui/shortcutcontainer.h \
	      gui/shortcutwindow.cpp \
	      gui/shortcutwindow.h \
	      gui/skilldialog.cpp \
	      gui/skilldialog.h \
	      gui/skin.cpp \
	      gui/skin.h \
	      gui/speechbubble.cpp \
	      gui/speechbubble.h \
	      gui/specialswindow.cpp \
	      gui/specialswindow.h \
	      gui/statuswindow.cpp \
	      gui/statuswindow.h \
	      gui/storagewindow.cpp \
	      gui/storagewindow.h \
	      gui/table.cpp \
	      gui/table.h \
	      gui/tablemodel.cpp \
	      gui/tablemodel.h \
	      gui/textdialog.cpp \
	      gui/textdialog.h \
	      gui/textrenderer.h \
	      gui/trade.cpp \
	      gui/trade.h \
	      gui/truetypefont.cpp \
	      gui/truetypefont.h \
	      gui/unregisterdialog.cpp \
	      gui/unregisterdialog.h \
	      gui/updatewindow.cpp \
	      gui/updatewindow.h \
	      gui/viewport.cpp \
	      gui/viewport.h \
	      gui/windowmenu.cpp \
	      gui/windowmenu.h \
	      gui/worldselectdialog.cpp \
	      gui/worldselectdialog.h \
	      net/adminhandler.h \
	      net/charhandler.h \
	      net/chathandler.h \
	      net/download.cpp \
	      net/download.h \
	      net/gamehandler.h \
	      net/generalhandler.h \
	      net/guildhandler.h \
	      net/inventoryhandler.h \
	      net/logindata.h \
	      net/loginhandler.h \
	      net/messagehandler.h \
	      net/messagein.cpp \
	      net/messagein.h \
	      net/messageout.cpp \
	      net/messageout.h \
	      net/npchandler.h \
	      net/net.cpp \
	      net/net.h \
	      net/partyhandler.h \
	      net/playerhandler.h \
	      net/serverinfo.h \
	      net/specialhandler.h \
	      net/tradehandler.h \
	      net/worldinfo.h \
	      resources/action.cpp \
	      resources/action.h \
	      resources/ambientoverlay.cpp \
	      resources/ambientoverlay.h \
	      resources/animation.cpp \
	      resources/animation.h \
	      resources/colordb.cpp \
	      resources/colordb.h \
	      resources/dye.cpp \
	      resources/dye.h \
	      resources/emotedb.cpp \
	      resources/emotedb.h \
	      resources/image.cpp \
	      resources/image.h \
	      resources/imageloader.cpp \
	      resources/imageloader.h \
	      resources/imageset.h \
	      resources/imageset.cpp \
	      resources/imagewriter.cpp \
	      resources/imagewriter.h \
	      resources/itemdb.cpp \
	      resources/itemdb.h \
	      resources/iteminfo.h \
	      resources/iteminfo.cpp \
	      resources/mapreader.cpp \
	      resources/mapreader.h \
	      resources/monsterdb.cpp \
	      resources/monsterdb.h \
	      resources/monsterinfo.cpp \
	      resources/monsterinfo.h \
	      resources/music.cpp \
	      resources/music.h \
	      resources/npcdb.cpp \
	      resources/npcdb.h \
	      resources/resource.cpp \
	      resources/resource.h \
	      resources/resourcemanager.cpp \
	      resources/resourcemanager.h \
	      resources/sdlrescalefacility.cpp \
	      resources/sdlrescalefacility.h \
	      resources/soundeffect.h \
	      resources/soundeffect.cpp \
	      resources/spritedef.h \
	      resources/spritedef.cpp \
	      resources/wallpaper.cpp \
	      resources/wallpaper.h \
	      utils/base64.cpp \
	      utils/base64.h \
	      utils/dtor.h \
	      utils/gettext.h \
	      utils/mathutils.h \
	      utils/sha256.cpp \
	      utils/sha256.h \
	      utils/stringutils.cpp \
	      utils/stringutils.h \
	      utils/mutex.h \
	      utils/xml.cpp \
	      utils/xml.h \
	      animatedsprite.cpp \
	      animatedsprite.h \
	      animationparticle.cpp \
	      animationparticle.h \
	      being.cpp \
	      being.h \
	      beingmanager.cpp \
	      beingmanager.h \
	      channel.cpp \
	      channel.h \
	      channelmanager.cpp \
	      channelmanager.h \
	      commandhandler.cpp \
	      commandhandler.h \
	      configlistener.h \
	      configuration.cpp \
	      configuration.h \
	      effectmanager.cpp \
	      effectmanager.h \
	      emoteshortcut.cpp \
	      emoteshortcut.h \
	      engine.cpp \
	      engine.h \
	      equipment.cpp \
	      equipment.h \
	      flooritem.cpp \
	      flooritem.h \
	      flooritemmanager.cpp \
	      flooritemmanager.h \
	      game.cpp \
	      game.h \
	      graphics.cpp \
	      graphics.h \
	      guichanfwd.h \
	      guild.cpp \
	      guild.h \
	      imageparticle.cpp \
	      imageparticle.h \
	      inventory.cpp \
	      inventory.h \
	      item.cpp \
	      item.h \
	      itemshortcut.cpp \
	      itemshortcut.h \
	      joystick.cpp \
	      joystick.h \
	      keyboardconfig.cpp \
	      keyboardconfig.h \
	      localplayer.cpp \
	      localplayer.h \
	      lockedarray.h \
	      log.cpp \
	      log.h \
	      main.cpp \
	      main.h \
	      map.cpp\
	      map.h \
	      monster.cpp\
	      monster.h \
	      npc.cpp \
	      npc.h \
	      openglgraphics.cpp\
	      openglgraphics.h \
	      particle.cpp \
	      particle.h \
	      particlecontainer.cpp \
	      particlecontainer.h \
	      particleemitter.cpp \
	      particleemitter.h \
	      particleemitterprop.h \
	      player.cpp \
	      player.h \
	      playerrelations.cpp \
	      playerrelations.h \
	      position.cpp \
	      position.h \
	      properties.h \
	      rotationalparticle.cpp \
	      rotationalparticle.h \
	      shopitem.cpp \
	      shopitem.h \
	      simpleanimation.cpp \
	      simpleanimation.h \
	      sound.cpp \
	      sound.h \
	      sprite.h \
	      statuseffect.cpp \
	      statuseffect.h \
	      text.cpp \
	      text.h \
	      textmanager.cpp \
	      textmanager.h \
	      textparticle.cpp \
	      textparticle.h \
	      tileset.h \
	      units.cpp \
	      units.h \
	      vector.cpp \
	      vector.h

if SERVER_MANASERV
mana_CXXFLAGS += -DMANASERV_SUPPORT
mana_SOURCES += \
	      net/manaserv/adminhandler.cpp \
	      net/manaserv/adminhandler.h \
	      net/manaserv/beinghandler.cpp \
	      net/manaserv/beinghandler.h \
	      net/manaserv/buysellhandler.cpp \
	      net/manaserv/buysellhandler.h \
	      net/manaserv/charhandler.cpp \
	      net/manaserv/charhandler.h \
	      net/manaserv/chathandler.cpp \
	      net/manaserv/chathandler.h \
	      net/manaserv/connection.cpp \
	      net/manaserv/connection.h \
	      net/manaserv/effecthandler.cpp \
	      net/manaserv/effecthandler.h \
	      net/manaserv/gamehandler.cpp \
	      net/manaserv/gamehandler.h \
	      net/manaserv/generalhandler.cpp \
	      net/manaserv/generalhandler.h \
	      net/manaserv/guildhandler.cpp \
	      net/manaserv/guildhandler.h \
	      net/manaserv/internal.cpp \
	      net/manaserv/internal.h \
	      net/manaserv/inventoryhandler.cpp \
	      net/manaserv/inventoryhandler.h \
	      net/manaserv/itemhandler.h \
	      net/manaserv/itemhandler.cpp \
	      net/manaserv/loginhandler.cpp \
	      net/manaserv/loginhandler.h \
	      net/manaserv/messagehandler.cpp \
	      net/manaserv/messagehandler.h \
	      net/manaserv/messagein.cpp \
	      net/manaserv/messagein.h \
	      net/manaserv/messageout.cpp \
	      net/manaserv/messageout.h \
	      net/manaserv/network.cpp \
	      net/manaserv/network.h \
	      net/manaserv/npchandler.cpp \
	      net/manaserv/npchandler.h \
	      net/manaserv/partyhandler.cpp \
	      net/manaserv/partyhandler.h \
	      net/manaserv/playerhandler.cpp \
	      net/manaserv/playerhandler.h \
	      net/manaserv/protocol.h \
	      net/manaserv/specialhandler.cpp \
	      net/manaserv/specialhandler.h \
	      net/manaserv/tradehandler.cpp \
	      net/manaserv/tradehandler.h
endif

if SERVER_EATHENA
mana_CXXFLAGS += -DEATHENA_SUPPORT
mana_SOURCES += \
	      net/ea/gui/partytab.cpp \
	      net/ea/gui/partytab.h \
	      net/ea/adminhandler.cpp \
	      net/ea/adminhandler.h \
	      net/ea/beinghandler.cpp \
	      net/ea/beinghandler.h \
	      net/ea/buysellhandler.cpp \
	      net/ea/buysellhandler.h \
	      net/ea/charserverhandler.cpp \
	      net/ea/charserverhandler.h \
	      net/ea/chathandler.cpp \
	      net/ea/chathandler.h \
	      net/ea/equipmenthandler.cpp \
	      net/ea/equipmenthandler.h \
	      net/ea/gamehandler.cpp \
	      net/ea/gamehandler.h \
	      net/ea/generalhandler.cpp \
	      net/ea/generalhandler.h \
	      net/ea/guildhandler.cpp \
	      net/ea/guildhandler.h \
	      net/ea/inventoryhandler.cpp \
	      net/ea/inventoryhandler.h \
	      net/ea/itemhandler.cpp \
	      net/ea/itemhandler.h \
	      net/ea/loginhandler.cpp \
	      net/ea/loginhandler.h \
	      net/ea/messagehandler.cpp \
	      net/ea/messagehandler.h \
	      net/ea/messagein.cpp \
	      net/ea/messagein.h \
	      net/ea/messageout.cpp \
	      net/ea/messageout.h \
	      net/ea/network.cpp \
	      net/ea/network.h \
	      net/ea/npchandler.cpp \
	      net/ea/npchandler.h \
	      net/ea/partyhandler.cpp \
	      net/ea/partyhandler.h \
	      net/ea/playerhandler.cpp \
	      net/ea/playerhandler.h \
	      net/ea/protocol.h \
	      net/ea/specialhandler.cpp \
	      net/ea/specialhandler.h \
	      net/ea/tradehandler.cpp \
	      net/ea/tradehandler.h
endif

# set the include path found by configure
INCLUDES = $(all_includes)
