SET (FILES
    bg_quad_dis.png
    browserfont.png
    button_disabled.png
    buttonhi.png
    button.png
    buttonpress.png
    checkbox.png
    circle-gray.png
    circle-green.png
    close_button.png
    deepbox.png
    default.png
    equip_bg.png
    fixedfont.png
    gui.xml
    hits_blue.png
    hits_red.png
    hits_yellow.png
    hscroll_left_default.png
    hscroll_left_highlight.png
    hscroll_left_pressed.png
    hscroll_right_default.png
    hscroll_right_highlight.png
    hscroll_right_pressed.png
    item_shortcut_bgr.png
    menuitemD.png
    menuitemF.png
    menuitemN.png
    menuitemP.png
    mouse.png
    radioin.png
    radioout.png
    resize.png
    rpgfont_wider.png
    sansserif8.png
    selection.png
    slider.png
    speech_bubble.png
    speechbubble.xml
    tab.png
    tabselected.png
    target-cursor-blue-l.png
    target-cursor-blue-m.png
    target-cursor-blue-s.png
    target-cursor-red-l.png
    target-cursor-red-m.png
    target-cursor-red-s.png
    thickborder.png
    unknown-item.png
    vscroll_blue.png
    vscroll_down_default.png
    vscroll_down_highlight.png
    vscroll_down_pressed.png
    vscroll_grey.png
    vscroll_red.png
    vscroll_up_default.png
    vscroll_up_highlight.png
    vscroll_up_pressed.png
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/graphics/gui)
