
guidir = $(pkgdatadir)/data/graphics/gui

gui_DATA =				\
	attack_target.png		\
	bg_quad_dis.png			\
	browserfont.png			\
	button.png			\
	button_disabled.png		\
	buttonhi.png			\
	buttonpress.png			\
	checkbox.png			\
	fixedfont.png			\
	hits_blue.png			\
	hits_red.png			\
	hits_yellow.png			\
	hscroll_left_default.png	\
	hscroll_left_highlight.png	\
	hscroll_left_pressed.png	\
	hscroll_right_default.png	\
	hscroll_right_highlight.png	\
	hscroll_right_pressed.png	\
	mouse.png			\
	menuitemD.png			\
	menuitemF.png			\
	menuitemN.png			\
	menuitemP.png			\
	radioin.png			\
	radioout.png			\
	selection.png			\
	sansserif8.png			\
	slider.png			\
	deepbox.png			\
	thickborder.png			\
	vscroll_blue.png		\
	vscroll_down_default.png	\
	vscroll_down_highlight.png	\
	vscroll_down_pressed.png	\
	vscroll_grey.png		\
	vscroll_red.png			\
	vscroll_up_default.png		\
	vscroll_up_highlight.png	\
	vscroll_up_pressed.png		\
	rpgfont_wider.png		\
	resize.png

EXTRA_DIST =				\
	$(gui_DATA)
