
guidir = $(pkgdatadir)/data/graphics/gui

gui_DATA =				\
	bubble.png			\
	button.png			\
	button_disabled.png		\
	buttonhi.png			\
	buttonpress.png			\
	checkbox.png			\
	circle-gray.png			\
	circle-green.png		\
	close_button.png		\
	deepbox.png			\
	gui.xml				\
	hscroll_left_default.png	\
	hscroll_left_highlight.png	\
	hscroll_left_pressed.png	\
	hscroll_right_default.png	\
	hscroll_right_highlight.png	\
	hscroll_right_pressed.png	\
	item_shortcut_bgr.png		\
	mouse.png			\
	radioin.png			\
	radioout.png			\
	resize.png			\
	selection.png			\
	slider.png			\
	sticky_button.png		\
	speechbubble.xml		\
	tab.png				\
	tabselected.png			\
	target-cursor-blue-l.png	\
	target-cursor-blue-m.png	\
	target-cursor-blue-s.png	\
	target-cursor-red-l.png		\
	target-cursor-red-m.png		\
	target-cursor-red-s.png		\
	unknown-item.png		\
	vscroll_down_default.png	\
	vscroll_down_highlight.png	\
	vscroll_down_pressed.png	\
	vscroll_grey.png		\
	vscroll_up_default.png		\
	vscroll_up_highlight.png	\
	vscroll_up_pressed.png		\
	window.png

EXTRA_DIST =				\
	$(gui_DATA)
